fix: main.jsをモジュールとして読み込むように修正

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./output.css">
-  <script src="./main.js"></script>
+  <script type="module" src="./main.js"></script>
   <title>CookingTimeline</title>
 </head>
 <body>
   <h1 class="text-3xl">CookingTimeline</h1>
+  <div>
+
+  </div>
 </body>
 </html>
