--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
   <title>CookingTimeline</title>
 </head>
 <body>
-  <h1 class="text-3xl">CookingTimeline</h1>
+  <h1 class="text-3xl">Home</h1>
   <div>
-
+    <h2 class="text-xl">Select Menu</h2>
+    <select name="menu" id="menu-select"></select>
+    <button disabled id="select-button">Select</button>
   </div>
 </body>
 </html>
