feat: レシピ表示と料理タイムラインのための新しいセクションを追加し、ナビゲーションを改善

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,13 @@
   <section id="recipe-section" style="display:none">
     <nav class="mb-4"><a href="#">← Home</a></nav>
     <div id="recipe-view"></div>
-    <button>Start Cooking</button>
+    <a id="start-cooking">Start Cooking</a>
+  </section>
+
+  <!-- Cooking Timeline -->
+  <section id="cooking-section" style="display:none">
+    <h2 class="text-xl">Cooking Timeline</h2>
+    <div id="cooking-view"></div>
   </section>
 </body>
 </html>
