feat: レシピ詳細表示のためのセクションを改善し、不要なコードを削除

--- a/src/index.html
+++ b/src/index.html
@@ -13,22 +13,16 @@
   </header>
 
   <!-- Home / Menu List -->
-  <section id="home-section">
+  <section id="home-section" class="hidden">
     <h2 class="text-xl">Select Menu</h2>
     <ul id="menu-list"></ul>
   </section>
 
   <!-- Recipe Detail -->
-  <section id="recipe-section" style="display:none">
+  <section id="recipe-section" class="hidden">
     <nav class="mb-4"><a href="#">← Home</a></nav>
     <div id="recipe-view"></div>
     <a id="start-cooking">Start Cooking</a>
-  </section>
-
-  <!-- Cooking Timeline -->
-  <section id="cooking-section" style="display:none">
-    <h2 class="text-xl">Cooking Timeline</h2>
-    <div id="cooking-view"></div>
   </section>
 </body>
 </html>
