feat: 調理再生機能を追加し、ルーティングとナビゲーションを更新

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         </a>
       </div>
     </section>
+
+    <!-- Cooking Playback -->
+    <section id="cooking-section" class="hidden">
+      <div id="cooking-view"></div>
+    </section>
   </main>
 </body>
 </html>
