feat: たくさんのレシピを追加, aiによる生成であることの警告を追加

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="text-center mb-8">
           <h2 class="text-3xl font-bold text-gray-800 mb-4">レシピを選択してください</h2>
           <p class="text-gray-600">お好みのレシピを選んで、効率的な調理手順を確認しましょう</p>
+          <p class="text-gray-500 text-xs">注意：レシピはAIによって作成されています。</p>
         </div>
         <ul id="menu-list" class="grid gap-4 md:grid-cols-2 lg:grid-cols-3"></ul>
       </div>
